# fak-django-graphql-jupyterlab-template

./: LICENSE  README.md  TODO.txt  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: README.rst  manage.py  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: loadtests.json
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/labs/: Template.ipynb
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/labs/necessary_imports/: django_for_jupyter_import_me_pls.py  loaded_imports_by_shell_plus.txt
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/: apps.py  models.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: schema.py  settings.py  urls.py
