[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Fak's template"
version = "0.1.0"
description = ""
authors="{{cookiecutter.authors}}"
readme = "README.md"
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"

cookiecutter = "^1.7"

flake8-pytest-style = "^1.5"

pytest = "^6.2"

docker-compose = "^1.29"
