[tool.poetry]
name = "ctest"
version = "0.1.0"
description = ""
authors = ["Fak"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
graphene-django = "^2.15.0"
django-cors-headers = "^3.10.0"
django-extensions = "^3.1.5"
jupyterlab = "^3.2.2"
pandas = "^1.3.4"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "my_module:main"